--- a/public/output/style.css
+++ b/public/output/style.css
@@ -13,3 +13,28 @@ body {
   height: 100vh;
   color: lightgray;
 }
+
+.flex-container {
+  display: flex;
+}
+
+.flex-container > div {
+  size : 50%;
+  margin: 10px;
+  padding: 20px;
+  font-size: 18px;
+  text-align: center;
+  color: rgb(141, 141, 141)
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid rgb(240, 240, 240);
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
+}
